Change Sizing & Postioning on About Page & Other Stuff

--- a/about.html
+++ b/about.html
@@ -4,103 +4,110 @@
 	<meta charset="utf-8">
 	<title>ReBrandit | About</title>
 	<meta name="description" content=" ">
-	<meta name="author" content="">	
+	<meta name="author" content="">
 <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- FONT
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  
+
 <!-- CSS
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
 	crossorigin="anonymous">
-	<link rel="stylesheet" href="css/magnific-popup.css"> 
-	
+	<link rel="stylesheet" href="css/magnific-popup.css">
+
 <!-- Scripts
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->  
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	
+
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </head>
 
 <body>
-	<header class="main_nav">		
-		<div class="container">			
+	<header class="main_nav">
+		<div class="container">
 			<div class="twelve columns">
-			<nav>
-				<a href="index.html" class="nav">Home</a>
-				<a href="about.html" class="nav">About</a>
-				<a href="contact.html" class="nav">Contact</a>
-				<a href="work.html" class="nav">Work</a>
-			</nav>
-			
+				<nav>
+					<a href="index.html" class="nav">Home</a>
+					<a href="about.html" class="nav" target="_blank">About</a>
+					<a href="contact.html" class="nav" target="_blank">Contact</a>
+					<a href="work.html" class="nav" target="_blank">Work</a>
+				</nav>
+
 			</div>
 		</div>
 	</header>
-	
+
 	<div class="row">
-		<div class="container">			
+		<div class="container">
 			<div class="twelve columns">
 				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
 				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your Image  </p>
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="row">
 		<div class="container">
 			<div class="twelve columns">
-				<p style="text-align: center;">Based in Fort Myers, Fl ReBrandit, LLC is a petroleum industry service company providing complete imaging solutions in Florida & Georgia. We specialize in Marketing Upgrades, Rebranding, Canopy Repair, Lighting, Remodeling the exteriors of service stations, convenience stores & car washes. 
+				<p style="text-align: center;">Based in Fort Myers, FL ReBrandit, LLC is a petroleum industry service company providing complete imaging solutions in Florida & Georgia. We specialize in Marketing Upgrades, Rebranding, Canopy Repair, Lighting, Remodeling the exteriors of service stations, convenience stores & car washes.
 				</p>
 			</div>
 		</div>
 	</div>
-	
-	<div class="container main">
+
+<div class="container main">
 	<div class="row">
-		
+
 		<div class="four columns portfolio">
 			<img src="images/derrik.jpg"/>
-			<p>Derrik is instrumental in the development of ReBrandit,LLC. In the last quarter of 2000, he started BP Re-image Program in Atlanta, Georgia. It included ordering and installing of the main I.D. sign, canopies, dispensers, and building re-branding. Derrik managed crews in Ohio, Kentucky, Indiana, and West Virginia, rebranding BP, Marathon, Shell, Chevron, Texaco, Mobil, Exxon, and Valero from start to finish. He has also rebranded Chevrolet, Toyota, & Nissan dealerships as well as McDonald's, KFC, and Taco Bell restaurants. His greatest strengths are paying attention to detail & getting the job done.</p>
+			<p class="about-text">Derrik is instrumental in the development of ReBrandit,LLC.
+				In the last quarter of 2000, he started BP Re-image Program in Atlanta, Georgia.
+				It included ordering and installing of the main I.D. sign, canopies, dispensers, and building re-branding.
+				Derrik managed crews in Ohio, Kentucky, Indiana, and West Virginia, rebranding BP, Marathon,
+				Shell, Chevron, Texaco, Mobil, Exxon, and Valero from start to finish. He has also rebranded Chevrolet, Toyota,
+				& Nissan dealerships as well as McDonald's, KFC, and Taco Bell restaurants.
+				His greatest strengths are paying attention to detail & getting the job done.
+			</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/mike.jpg"/>
-			<p>
+			<p class="about-text">
 			Mike was the youngest station dealer in Shell's history. In 1972, at age 21, he took over and ran a 3-bay Shell gas station in Belleville, Illinois. This was before convenience store gas stations were built; when the dealer pumped the customer's gas and cleaned their windshield, checked their oil, etc. He owned Shell and Mobil gas stations in Southern Illinois for 17 years. Throughout his life he ran various businesses and or the past 21 years, Mike owned and operated Jetscape Signarama in Fort Myers, Florida, which has since evolved into ReBrandit,LLC.
 			</p>
 		</div>
-		<div class="four columns portfolio">
-			<img src="images/scott.jpg"/>
-			<p>
-			Scott has been successful in building & managing companies and is in charge of all daily operations.
-			</p>
-		</div>
-	</div>
-	
-	<div class="row">
+
 		<div class="four columns portfolio">
 			<img src="images/james.jpg"/>
-			<p>
+			<p class="about-text">
 			"Bub" has more than 25 years experience Re-Branding gas stations coast to coast. He is proficient in all aspects of gas station installation and retrofitting; Canopies, MID Signs to car washes.
 			</p>
 		</div>
+	</div>
+<div class="row">
+	<div class="four columns portfolio">
+		<img src="images/valeie.jpg"/>
+		<p class="about-text">
+		Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
+		</p>
+	</div>
+	<div class="four columns portfolio">
+		<img src="images/tim.jpg"/>
+		<p class="about-text">
+			Tim my dude
+		</p>
+	</div>
 		<div class="four columns portfolio">
 			<img src="images/steve.jpg"/>
-			<p>
+			<p class="about-text">
 			Steve has more than 20 years of experience in the petroleum industry service business.
-			</p>
-		</div>
-		<div class="four columns portfolio">
-			<img src="images/valeie.jpg"/>
-			<p>
-			Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
 			</p>
 		</div>
 	</div>
@@ -108,38 +115,38 @@
 	<div class="row">
 		<div class="four columns portfolio">
 			<img src="images/hugo.jpg"/>
-			<p>
+			<p class="about-text">
 			Hugo has more than 25 years experience in the construction industry.
 			</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/ken.jpg"/>
-			<p>
+			<p class="about-text">
 			Ken has more than 30 years experience in the construction industry and is an all around construction and painting expert.
 			</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/marilyn.jpg"/>
-			<p>
+			<p class="about-text">
 			Marilyn is our permit specialist with over 25 years experience pulling permits in Florida.
 			</p>
 		</div>
 	</div>
 	</div><!-- Container-->
-	
+
 	<footer>
 		<div class="container">
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
 				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: 239-887-4418 | (800)-482-3460 <br>
-				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
+				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>
 			</div>
 			<div class="row twelve columns">
 				<p class="copyright">&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
 			</div>
-		</div>	
-	</footer>	
-	
+		</div>
+	</footer>
+
 </body>
 </html>
