--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 			<div class="twelve columns">
 			<nav>
 				<a href="index.html" class="nav">Home</a>
-				<a href="about.html" class="nav">About</a>
-				<a href="contact.html" class="nav">Contact</a>
-				<a href="work.html" class="nav">Work</a>
+				<a href="about.html" class="nav" target="_blank">About</a>
+				<a href="contact.html" class="nav" target="_blank">Contact</a>
+				<a href="work.html" class="nav" target="_blank">Work</a>
 			</nav>
 
 			</div>
@@ -56,9 +56,9 @@
 		<div class="container">
 			<div class="twelve columns">
 				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
-        
+
 				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your Image</p>
-        
+
       </div>
 		</div>
 	</div>
