Add Tim Back to About Page

--- a/about.html
+++ b/about.html
@@ -95,13 +95,13 @@
 	<div class="four columns portfolio">
 		<img src="images/valeie.jpg"/>
 		<p class="about-text">
-		Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
+		 Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
 		</p>
 	</div>
 	<div class="four columns portfolio">
 		<img src="images/tim.jpg"/>
 		<p class="about-text">
-			Tim my dude
+			Tim has more than 6 years of experience in the petroleum industry service business.
 		</p>
 	</div>
 		<div class="four columns portfolio">
