--- a/about.html
+++ b/about.html
@@ -68,17 +68,20 @@
 		
 		<div class="four columns portfolio">
 			<img src="images/derrik.jpg"/>
-			<p>Derrik is instrumental in the development of ReBrandit,LLC. In the last quarter of 2000, he started BP Re-image Program in Atlanta, Georgia. It included ordering and installing of the main I.D. sign, canopies, dispensers, and building re-branding. Derrik managed crews in Ohio, Kentucky, Indiana, and West Virginia, rebranding BP, Marathon, Shell, Chevron, Texaco, Mobil, Exxon, and Valero from start to finish. He has also rebranded Chevrolet, Toyota, & Nissan dealerships as well as McDonald's, KFC, and Taco Bell restaurants. His greatest strengths are paying attention to detail & getting the job done.</p>
+            <h4>Derrik Willis <br>Partner Projects Manager</br></h4>
+            <p>Derrik is instrumental in the development of ReBrandit,LLC. In the last quarter of 2000, he started BP Re-image Program in Atlanta, Georgia. It included ordering and installing of the main I.D. sign, canopies, dispensers, and building re-branding. Derrik managed crews in Ohio, Kentucky, Indiana, and West Virginia, rebranding BP, Marathon, Shell, Chevron, Texaco, Mobil, Exxon, and Valero from start to finish. He has also rebranded Chevrolet, Toyota, & Nissan dealerships as well as McDonald's, KFC, and Taco Bell restaurants. His greatest strengths are paying attention to detail & getting the job done.</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/mike.jpg"/>
-			<p>
+            <h4>Mike Tissier <br>Owner</br></h4>
+            <p>
 			Mike was the youngest station dealer in Shell's history. In 1972, at age 21, he took over and ran a 3-bay Shell gas station in Belleville, Illinois. This was before convenience store gas stations were built; when the dealer pumped the customer's gas and cleaned their windshield, checked their oil, etc. He owned Shell and Mobil gas stations in Southern Illinois for 17 years. Throughout his life he ran various businesses and or the past 21 years, Mike owned and operated Jetscape Signarama in Fort Myers, Florida, which has since evolved into ReBrandit,LLC.
 			</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/scott.jpg"/>
-			<p>
+            <h4>Scott Brown  <br>GM</br></h4>
+            <p>
 			Scott has been successful in building & managing companies and is in charge of all daily operations.
 			</p>
 		</div>
@@ -87,18 +90,22 @@
 	<div class="row">
 		<div class="four columns portfolio">
 			<img src="images/james.jpg"/>
-			<p>
+            <h4>James "Bub" Staley <br>Crew Manager<br></h4>
+            <p>
 			"Bub" has more than 25 years experience Re-Branding gas stations coast to coast. He is proficient in all aspects of gas station installation and retrofitting; Canopies, MID Signs to car washes.
 			</p>
 		</div>
-		<div class="four columns portfolio">
-			<img src="images/steve.jpg"/>
-			<p>
+            <div class="four columns portfolio">
+                <img src="images/steve.jpg"/>
+                <h4>Steve Sites<br>On Site Manager</br></h4>	
+
+            <p>
 			Steve has more than 20 years of experience in the petroleum industry service business.
 			</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/valeie.jpg"/>
+            <h4>Valerie Zanni<br>Office Coordinator</br></h4>
 			<p>
 			Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
 			</p>
@@ -108,19 +115,22 @@
 	<div class="row">
 		<div class="four columns portfolio">
 			<img src="images/hugo.jpg"/>
+            <h4>Hugo Torres<br>Sign Crew</br></h4>
 			<p>
 			Hugo has more than 25 years experience in the construction industry.
 			</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/ken.jpg"/>
-			<p>
+            <h4>Ken Daly<br>Painting Crew</br></h4>
+            <p>
 			Ken has more than 30 years experience in the construction industry and is an all around construction and painting expert.
 			</p>
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/marilyn.jpg"/>
-			<p>
+            <h4>Marilyn Price<br>Permit Specialist</br></h4>
+            <p>
 			Marilyn is our permit specialist with over 25 years experience pulling permits in Florida.
 			</p>
 		</div>
