--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 		</div>
 		<div class="four columns portfolio">
 			<img src="images/tim.jpg"/>
-			<h4>Tim Ruff<br>Sing Crew</br></h4>
+			<h4>Tim Ruff<br>Sign Crew</br></h4>
 			<p class="about-text">
 				Tim has more than 6 years of experience in the petroleum industry service business.
 			</p>
