Change Photo Layout and Hover Color

--- a/about.html
+++ b/about.html
@@ -65,10 +65,10 @@
 
 
 <div class="container main">
-	<div class="row">
-		<div class="four columns portfolio">
+<div class="row">
+		<div class="four columns portfolio image-space">
 			<img src="images/derrik.jpg"/>
-        <h4>Derrik Willis <br>Partner Projects Manager</br></h4>
+        <h4>Derrik Willis <br>Partner Projects Man.</br></h4>
         <p class="about-text">
 					Derrik is instrumental in the development of ReBrandit,LLC.
 					In the last quarter of 2000, he started BP Re-image Program in Atlanta, Georgia.
@@ -80,46 +80,40 @@
 					His greatest strengths are paying attention to detail & getting the job done.
 				</p>
 		</div>
-		<div class="four columns portfolio">
+		<div class="four columns portfolio image-space">
 			<img src="images/mike.jpg"/>
       	<h4>Mike Tissier <br>Owner</br></h4>
 	      <p class="about-text">
 				Mike was the youngest station dealer in Shell's history. In 1972, at age 21, he took over and ran a 3-bay Shell gas station in Belleville, Illinois. This was before convenience store gas stations were built; when the dealer pumped the customer's gas and cleaned their windshield, checked their oil, etc. He owned Shell and Mobil gas stations in Southern Illinois for 17 years. Throughout his life he ran various businesses and or the past 21 years, Mike owned and operated Jetscape Signarama in Fort Myers, Florida, which has since evolved into ReBrandit,LLC.
 				</p>
 		</div>
-		<div class="four columns portfolio">
-			<img src="images/scott.jpg"/>
-	      <h4>Scott Brown  <br>GM</br></h4>
-	      <p class="about-text">
-				Scott has been successful in building & managing companies and is in charge of all daily operations.
-				</p>
-	</div>
+	
 </div>
 
 	<div class="row">
-		<div class="four columns portfolio">
+		<div class="four columns portfolio image-space">
 			<img src="images/james.jpg"/>
-	      <h4>James "Bub" Staley <br>Crew Manager<br></h4>
+	      <h4>James "Bub" Staley <br>Crew Man.<br></h4>
 	      <p class="about-text">
 					"Bub" has more than 25 years experience Re-Branding gas stations coast to coast.
 					He is proficient in all aspects of gas station installation and retrofitting; Canopies, MID Signs to car washes.
 				</p>
 			</div>
-    <div class="four columns portfolio">
+    <div class="four columns portfolio image-space">
         <img src="images/steve.jpg"/>
-        <h4>Steve Sites<br>On Site Manager</br></h4>
+        <h4>Steve Sites<br>On Site Man.</br></h4>
 				<p class="about-text">
 					Steve has more than 20 years of experience in the petroleum industry service business.
 				</p>
 		</div>
-		<div class="four columns portfolio">
+		<div class="four columns portfolio image-space  ">
 			<img src="images/valeie.jpg"/>
       <h4>Valerie Zanni<br>Office Coordinator</br></h4>
 			<p class="about-text">
 				Valerie worked for the state of Connecticut for more than 22 years, organizing projects in different areas.
 			</p>
 		</div>
-		<div class="four columns portfolio">
+		<div class="four columns portfolio image-space ">
 			<img src="images/tim.jpg"/>
 			<h4>Tim Ruff<br>Sign Crew</br></h4>
 			<p class="about-text">
@@ -128,21 +122,21 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="four columns portfolio">
+		<div class="four columns portfolio image-space ">
 			<img src="images/hugo.jpg"/>
 	    <h4>Hugo Torres<br>Sign Crew</br></h4>
 			<p class="about-text">
 			Hugo has more than 25 years experience in the construction industry.
 			</p>
 		</div>
-		<div class="four columns portfolio">
+		<div class="four columns portfolio image-space ">
 			<img src="images/ken.jpg"/>
       <h4>Ken Daly<br>Painting Crew</br></h4>
       <p class="about-text">
 				Ken has more than 30 years experience in the construction industry and is an all around construction and painting expert.
 			</p>
 		</div>
-		<div class="four columns portfolio">
+		<div class="four columns portfolio image-space ">
 			<img src="images/marilyn.jpg"/>
       <h4>Marilyn Price<br>Permit Specialist</br></h4>
       <p class="about-text">
@@ -157,8 +151,8 @@
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
-				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: 239-887-4418 | (800)-482-3460 <br>
-				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>
+                    <strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
+                    Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a></p>
 			</div>
 			<div class="row twelve columns">
 				<p class="copyright">&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
