--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
 
 <!-- FONT
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
+<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <!-- CSS
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<link rel="stylesheet" href="css/normalize.css">
