--- a/index.html
+++ b/index.html
@@ -56,20 +56,19 @@
 			<div class="twelve columns">
 				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
 
-				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your Image</p>
+				<p style="color: blue;text-align: center;font-size: 1.5em;margin-left: -0.6%;">When It's Time to Change Your Image</p>
 
       </div>
 		</div>
 	</div>
 
+<section class="align-services">
 	<div class="row">
-
 		<div class="services">
 			<h2>
 			Services
 			</h2>
 		</div>
-
 		<div class="container lists">
 			<div class="leftlist">
 				<div class="six columns">
@@ -97,13 +96,13 @@
 			</div>
 		</div>
 	</div>
+</section>
 
+<section class="main-display">
 	<div class="row">
 		<div class="container">
 			<div class="twelve columns">
-				<!--<div class="image-container">-->
 					<img src="images/h1.jpg" alt="gas station" style="width: %"/>
-				<!--</div>-->
 			</div>
 		</div>
 	</div>
@@ -125,10 +124,11 @@
 			</div>
 		</div>
 	</div>
+</section>
 
 	<footer>
 		<div class="container">
-			<div class="row twelve columns" style="padding-top: 2%">
+			<div class="row twelve columns" style= "margin-left: -1%; padding-top: 1.6%;">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
 					<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209, Ft. Myers, FL 33907
