--- a/contact.html
+++ b/contact.html
@@ -64,20 +64,22 @@
 		</div>
 	</div>
 
-	<div class="row">
+	
+    <div class="row">
 		<div class="contact">
 			<form>
-				<div class="row">
+				<div class="row test-form">
 					<div class="six columns">
+                        
 					  <label for="exampleRecipientInput">Your Name</label>
 					  <input class="u-full-width" type="text" placeholder="Full Name" id="exampleRecipientInput">
 					</div>
 					<div class="six columns">
-					  <label for="exampleEmailInput">Your email</label>
+					  <label for="exampleEmailInput">Your Email</label>
 					  <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
 					</div>
 				</div>
-				<label for="exampleMessage">Message</label>
+				<br><label for="exampleMessage"><br>Message</label></br>
 				<textarea class="u-full-width" placeholder="Hello! …" id="exampleMessage"></textarea>
 				<input class="button-primary" type="submit" value="Submit">
 			</form>
