--- a/work.html
+++ b/work.html
@@ -94,11 +94,11 @@
 		</div>
 	</div>
 
-	<div class="row">
+	<!--<div class="row">
 		<div class="four columns portfolio">
 			<img src="images/w7.jpg"/>
 		</div>
-	</div>
+	</div>-->
 
 	</div><!-- Container-->
 
