--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
+ <head>
 	<meta charset="utf-8">
 	<title>ReBrandit | Contact</title>
 	<meta name="description" content=" ">
@@ -56,48 +55,57 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="container">
+    <div class="container">
 		<div class="row twelve columns" style="padding-top: 2%">
-
 			<p class="footer">
-
 		</div>
 	</div>
-
-	
     <div class="row">
-		<div class="contact">
-			<form>
-				<div class="row test-form">
-					<div class="six columns">
-                        
-					  <label for="exampleRecipientInput">Your Name</label>
-					  <input class="u-full-width" type="text" placeholder="Full Name" id="exampleRecipientInput">
-					</div>
-					<div class="six columns">
-					  <label for="exampleEmailInput">Your Email</label>
-					  <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-					</div>
-				</div>
-				<br><label for="exampleMessage"><br>Message</label></br>
-				<textarea class="u-full-width" placeholder="Hello! …" id="exampleMessage"></textarea>
-				<input class="button-primary" type="submit" value="Submit">
-			</form>
-		</div>
-	</div>
+        <div class="contact">
+            <form>
+													<div id="form-container">
+                <div class="row test-form">
+                    <div class="six columns ">
 
-	<footer>
-		<div class="container">
-		<div class="row twelve columns">
-            <h2 class="footer">ReBrandit, LLC</h2>
-            <p><strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a> <br>
-                Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</p></a>
-            <p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
-		</div>
-		</div>
-	</footer>
-
+                      <label for="exampleRecipientInput">Your Name</label>
+                     <!-- <input class="u-full-width" type="text" placeholder="Full Name" id="exampleRecipientInput"> -->
+                        <input class="light-field" type="text" placeholder="Full Name">    
+                    </div>
+                    <div class="six columns">
+                      <label for="exampleEmailInput">Your Email</label>
+                      <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+                    </div>
+                    <br>
+                    <div class="six columns"></div><label for="exampleMessage">Message</label>
+                   <textarea class="u-full-width"  placeholder="Hello!" id="exampleMessage"></textarea>
+                  <div id="btn-container">  
+																	<input class="button-primary btn-text"  type="submit" value="Submit" style="align-content: center">
+                </div>
+													</div>
+													</div>
+            </form>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="row twelve columns">
+														<div id="footer-container">         
+																	<h2 class="footer">ReBrandit, LLC</h2>
+																	<p>Proud Member</p>
+															     <p>of the</p>
+				                  <p>FPMA</p>
+															<p>
+																					<strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>
+																					12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
+																					Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a>
+																	</p>
+																	<p class="copyright"><br>
+																					&copy; 2018 ReBrandit, LLC All Rights Reserved.
+																	</p>
+													</div>
+            </div>
+        </div>
+    </footer>
 <script src="scripts/jquery.magnific-popup.js"></script>
 <script type="text/javascript">
 	$('.image-link').magnificPopup({
