--- a/contact.html
+++ b/contact.html
@@ -89,20 +89,22 @@
     <footer>
         <div class="container">
             <div class="row twelve columns">
-														<div id="footer-container">
-																	<h2 class="footer">ReBrandit, LLC</h2>
-																	<p>Proud Member</p>
-															     <p>of the</p>
-				                  <p>FPMA</p>
-															<p>
-																					<strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>
-																					12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
-																					Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a>
-																	</p>
-																	<p class="copyright"><br>
-																					&copy; 2018 ReBrandit, LLC All Rights Reserved.
-																	</p>
-													</div>
+							<div id="footer-container">
+
+								<h2 class="footer">ReBrandit, LLC</h2>
+
+									<p>Proud Member</p>
+							    <p>of the</p>
+					        <p>FPMA</p>
+
+										<p>
+											<strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>
+											12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
+											Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a>
+										</p>
+										<p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
+
+							</div>
             </div>
         </div>
     </footer>
