--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 		<div class="container">
 			<div class="twelve columns">
 				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
-				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your Image  </p>
+				<p style="color: blue;text-align: center;font-size: 25px;font-family: 'Roboto', sans-serif;letter-spacing: 1px;">When It's Time to Change Your Image  </p>
 			</div>
 		</div>
 	</div>
@@ -93,9 +93,7 @@
 
 								<h2 class="footer">ReBrandit, LLC</h2>
 
-									<p>Proud Member</p>
-							    <p>of the</p>
-					        <p>FPMA</p>
+										<p>Proud Member of the FPMA</p>
 
 										<p>
 											<strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>
