--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 		<div class="container">
 			<div class="twelve columns">
 				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
-				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your Image  </p>
+				<p style="color: blue;text-align: center;font-size: 25px;font-family: 'Roboto', sans-serif;letter-spacing: 1px;">When It's Time to Change Your Image  </p>
 			</div>
 		</div>
 	</div>
@@ -58,7 +58,7 @@
 	<div class="row">
 		<div class="container">
 			<div class="twelve columns">
-				<p style="text-align: center;">Based in Fort Myers, FL ReBrandit, LLC is a petroleum industry service company providing complete imaging solutions in Florida & Georgia. We specialize in Marketing Upgrades, Rebranding, Canopy Repair, Lighting, Remodeling the exteriors of service stations, convenience stores & car washes.
+				<p style="text-align: center;font-size: 18px;letter-spacing: 1px;">Based in Fort Myers, FL ReBrandit, LLC is a petroleum industry service company providing complete imaging solutions in Florida & Georgia. We specialize in Marketing Upgrades, Rebranding, Canopy Repair, Lighting, Remodeling the exteriors of service stations, convenience stores & car washes.
 				</p>
 			</div>
 		</div>
@@ -159,9 +159,7 @@
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
-					                <p>Proud Member</p>
-																								<p>of the</p>
-																									<p>FPMA</p>
+					                	<p>Proud Member of the FPMA</p>
                     <strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a><br>
                     Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a></p>
 			</div>
