--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 			<div class="twelve columns">
 				<nav>
 					<a href="index.html" class="nav">Home</a>
-					<a href="about.html" class="nav" target="_blank">About</a>
+					<a href="about.html" style="color:blue;" class="nav" target="_blank">About</a>
 					<a href="contact.html" class="nav" target="_blank">Contact</a>
 					<a href="work.html" class="nav" target="_blank">Work</a>
 				</nav>
