--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 				<nav>
 					<a href="index.html" class="nav">Home</a>
 					<a href="about.html" class="nav" target="_blank">About</a>
-					<a href="contact.html" class="nav" target="_blank">Contact</a>
+					<a href="contact.html" style="color:blue;" class="nav" target="_blank">Contact</a>
 					<a href="work.html" class="nav" target="_blank">Work</a>
 				</nav>
 
