--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="container">
 			<div class="twelve columns">
 			<nav>
-				<a href="index.html" class="nav">Home</a>
+				<a href="index.html" style="color:blue;" class="nav">Home</a>
 				<a href="about.html" class="nav" target="_blank">About</a>
 				<a href="contact.html" class="nav" target="_blank">Contact</a>
 				<a href="work.html" class="nav" target="_blank">Work</a>
