--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
 					<a href="index.html" class="nav">Home</a>
 					<a href="about.html" class="nav" target="_blank">About</a>
 					<a href="contact.html" class="nav" target="_blank">Contact</a>
-					<a href="work.html" class="nav" target="_blank">Work</a>
+					<a href="work.html" style="color:blue;" class="nav" target="_blank">Work</a>
 				</nav>
 
 			</div>
@@ -107,7 +107,7 @@
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
-					                 	<p>Proud Member of the FPMA</p>    
+					                 	<p>Proud Member of the FPMA</p>
                     <strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a> <br>
                     Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</a></p>
 			</div>
