--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 		<div class="container">
 			<div class="twelve columns">
 			<nav>
-				<a href="index.html" style="color:blue;" class="nav">Home</a>
-				<a href="about.html" class="nav" target="_blank">About</a>
-				<a href="contact.html" class="nav" target="_blank">Contact</a>
-				<a href="work.html" class="nav" target="_blank">Work</a>
+				<a href="index.html" class="nav" style="color:blue;">Home</a>
+				<a href="about.html" class="nav">About</a>
+				<a href="contact.html" class="nav">Contact</a>
+				<a href="work.html" class="nav">Work</a>
 			</nav>
 
 			</div>
