--- a/work.html
+++ b/work.html
@@ -37,9 +37,9 @@
 			<div class="twelve columns">
 				<nav>
 					<a href="index.html" class="nav">Home</a>
-					<a href="about.html" class="nav" target="_blank">About</a>
-					<a href="contact.html" class="nav" target="_blank">Contact</a>
-					<a href="work.html" style="color:blue;" class="nav" target="_blank">Work</a>
+					<a href="about.html" class="nav">About</a>
+					<a href="contact.html" class="nav">Contact</a>
+					<a href="work.html" style="color:blue;" class="nav">Work</a>
 				</nav>
 
 			</div>
